# simple_finance_RAG

./: README.md  agent_setup.py  app.py  config.py  ingestion.py  ingestion_chroma.py  main.py  pyproject.toml  requirements.txt  system_prompt.py  test copy.ipynb
